nova update index

--- a/index.html
+++ b/index.html
@@ -1,68 +1,91 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
+
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Umbraosm - União dos Mapeadores Brasileiro do Openstreetmap</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,
+      initial-scale=1.0">
+    <meta name="description" content="Exemplo de página HTML5 básica">
+    <meta name="author" content="Seu Nome">
+    <title>Página HTML5 Básica</title>
+    <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+      color: #333;
+    }
+    header {
+      background: #007BFF;
+      color: white;
+      padding: 10px 0;
+      text-align: center;
+    }
+    nav {
+      background: #333;
+      color: white;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      padding: 20px;
+    }
+    section {
+      margin-bottom: 20px;
+    }
+    footer {
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+    }
+  </style>
   </head>
-  <body vlink="#551A8B" text="#000000" link="#0000EE" alink="#EE0000">
+  <body>
+    <nav> <br>
+    </nav>
+    <main>
+      <section id="sobre">
+        <div align="center"><br>
+          <img moz-do-not-send="true" src="images/Logo_Umbraosm.jpg"
+            alt="logo" width="286" height="80"></div>
+        <h2 align="center">Estamos construindo um novo site! <br>
+        </h2>
+        <div align="center"><b>Visite Nossas Redes Sociais!</b><br>
+          <b>Grupo no Telegram: </b><a moz-do-not-send="true"
+            href="https://t.me/grupoumbraosm">https://t.me/grupoumbraosm</a><br>
+          <b>Youtube:</b> <a moz-do-not-send="true"
+            href="https://www.youtube.com/@umbraosm">https://www.youtube.com/@umbraosm</a><br>
+          <b>Instagram:</b> <a moz-do-not-send="true"
+            href="https://www.instagram.com/umbraosmbrasil/">https://www.instagram.com/umbraosmbrasil/</a><br>
+        </div>
+      </section>
+      <br>
+    </main>
+    <footer>
+      <p><b>Endereço para Correspondência:</b><br>
+        Rua Frei Matias Tevis, N.285 Sala.1201 -&nbsp; HUB PLURAL)
+        CXPST: 067 - Bairro: Ilha do Leite - Cidade: Recife/PE - CEP:
+        50070-465<br>
+        © 2024 <b>Umbraosm</b> - União dos Mapeadores Brasileiro do
+        Openstreetmap - Todos os direitos reservados.&nbsp; <br>
+        <b>E-mail: </b>contato@umbraosm.com.br<br>
+      </p>
+    </footer>
     <br>
-    <div align="center"><b><font size="+2"><br>
-        </font></b><br>
-      <b><font size="+2"><a href="logo-umbraosm"><img
-              moz-do-not-send="true" src="images/Logo_Umbraosm.jpg"
-              alt="logo-umbraosm" width="392" height="109" border="0"></a><br>
-          <font face="Verdana">União dos Mapeadores Brasileiro do
-            Openstreetmap<br>
-          </font></font></b><font face="Verdana"><br>
-      </font></div>
-    <font face="Verdana"> </font>
-    <h2 class="display-2" align="center"><font size="+3" face="Verdana">Vem
-
-        ai um novo site em 2025 !!</font></h2>
-    <br>
-    <p class="blockart-paragraph blockart-paragraph-42c58dfb"
-      style="box-sizing: border-box; margin: 0px 0px 20px; padding: 0px;
-      border: 0px none; font-size: 18px; font-style: normal;
-      font-weight: 400; outline: 0px none; vertical-align: baseline;
-      color: rgb(255, 255, 255); font-variant-ligatures: normal;
-      font-variant-caps: normal; letter-spacing: 0.18px; text-align:
-      start; text-indent: 0px; text-transform: none; word-spacing: 0px;
-      -webkit-text-stroke-width: 0px; white-space: normal;
-      background-color: rgb(2, 30, 65); text-decoration-style: initial;
-      text-decoration-color: initial;"><font size="-1" face="Verdana"><b>Endereço
-
-          para Correspondência:</b><br>
-        Rua Frei Matias Tevis, N.285 Sala.1201 <br>
-        <strong style="box-sizing: border-box; font-weight: 600;">HUB
-          PLURAL) CXPST: 067<br>
-        </strong>CEP: 50070-465<br>
-        Bairro:Ilha do Leite&nbsp; <br>
-        Cidade: Recife/PE</font></p>
-    <p class="blockart-paragraph blockart-paragraph-42c58dfb"
-      style="box-sizing: border-box; margin: 0px 0px 20px; padding: 0px;
-      border: 0px none; font-size: 18px; font-style: normal;
-      font-weight: 400; outline: 0px none; vertical-align: baseline;
-      color: rgb(255, 255, 255); font-variant-ligatures: normal;
-      font-variant-caps: normal; letter-spacing: 0.18px; text-align:
-      start; text-indent: 0px; text-transform: none; word-spacing: 0px;
-      -webkit-text-stroke-width: 0px; white-space: normal;
-      background-color: rgb(2, 30, 65); text-decoration-style: initial;
-      text-decoration-color: initial;"><font face="Verdana"><font
-          size="-1">União dos Mapeadores Brasileiro do Openstreetmap -
-          2024 - <b>E-mail: </b>contato@umbraosm.com.br - Todos os
-          Direitos Reservados.</font><br>
-      </font> </p>
-    <font face="Verdana"> </font>
-    <p style="text-align:center"><font face="Verdana"><b>Grupo no
-          Telegram</b>:<b><a moz-do-not-send="true"
-            href="https://t.me/grupoumbraosm">https://t.me/grupoumbraosm</a></b><br>
-        <b>Youtube:</b></font><b><font face="Verdana"> <a
-            moz-do-not-send="true"
-            href="https://www.youtube.com/@umbraosm">https://www.youtube.com/@umbraosm</a></font><br>
-      </b><font face="Verdana"><b>Instagram:</b><b> </b><b><a
-            moz-do-not-send="true"
-            href="https://www.instagram.com/umbraosmbrasil/">https://www.instagram.com/umbraosmbrasil/</a></b></font><br>
-    </p>
     <br>
   </body>
 </html>
