--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <div align="center"><br>
           <img moz-do-not-send="true" src="images/Logo_Umbraosm.jpg"
             alt="logo" width="286" height="80"></div>
-    <p>Estamos construindo um novo site!</p>
+    <p>.<big>Estamos construindo um novo site!.</big></p>
       <section id="sobre">
         <div align="center"><br>
           <img moz-do-not-send="true" src="images/umbraosm_morro.png"
-            alt="logo" width="600" height="350"></div>
-    <p>Visite Nossas Redes Sociais!</p>
+            alt="logo" width="800" height="550"></div>
+    <p>.<big>Visite Nossas Redes Sociais!.</big></p>
   </div>
 
   <div class="links">
