--- a/index.html
+++ b/index.html
@@ -70,20 +70,18 @@
         <div align="center"><br>
           <img moz-do-not-send="true" src="images/Logo_Umbraosm.jpg"
             alt="logo" width="286" height="80"></div>
-    <p>.<big>Estamos construindo um novo site!.</big></p>
-      <section id="sobre">
+         <section id="sobre">
         <div align="center"><br>
           <img moz-do-not-send="true" src="images/umbraosm_morro.png"
             alt="logo" width="800" height="550"></div>
-    <p>.<big>Visite Nossas Redes Sociais!.</big></p>
+            <p>.<big>Estamos construindo um novo site!</big></p>
+    <p><big>Visite Nossas Redes Sociais!.</big></p>
   </div>
-
   <div class="links">
     <a href="https://t.me/grupoumbraosm" target="_blank">Grupo no Telegram</a>
     <a href="https://www.youtube.com/@umbraosm" target="_blank">YouTube</a>
     <a href="https://www.instagram.com/umbraosmbrasil/" target="_blank">Instagram</a>
   </div>
-
   <div class="footer">
     <p><strong>Endereço para Correspondência:</strong><br>
     Rua Frei Matias Tevis, N.285 Sala.1201 - (HUB PLURAL)<br>
